# api_to_roefact

./: .gitignore  .pypi_tok_240318.txt  CHANGELOG.md  LICENSE  README.md  README_git_automation_tools.md  RELEASE-QA_checklist.md  TODO_and_HOWTO.md  __version__.py  _automation_toos.md  _curs_share_experience.md  gh_mkdocs_auto_publish.md  git-graph.sh  gitupd_tags.sh  index.html  mkdocs.yml  pdm.lock.bck  pyproject.toml  pyproject.toml.to_be_created  pyproject_to_be_cleaned.toml  requirements.txt  requirements_stable_without_xl2roefact.txt  save_240228_requirements.txt  versions.yml
.github/: test_xl2roefact.yml
.github/workflows/: adhoc-run.yml  build_site.yml  build_site.yml.txt  build_xl2roefact.yml  ci.yml  ci.yml.temp_disabled.txt  gh_mkdocs_auto_publish.md  model_material_mkdocs_ci.yml.txt  pypi-publish.yml  run_xl2roefact.yml  run_xl2roefact.yml.txt  test_xl2roefact.yml
base_proc/: README_base_proc.md  base_proc.py  chkisld.py  requirements_base_proc.txt  xls2xml.py  xxx.txt
base_proc/chkxml/: chkxml.py
base_proc/ldxml/: ldxml.py
base_proc/modules/: chkisld.py  chkxml.py  ldxml.py  rdinv.py  (+1 more)
changelog_history/: CHANGELOG-0.1.0.dev.md  CHANGELOG-0.1.0.md  CHANGELOG-0.1.1.dev.md  CHANGELOG-0.1.1.md  CHANGELOG-0.1.10.dev.md  CHANGELOG-0.1.10.md  CHANGELOG-0.1.12.dev.md  CHANGELOG-0.1.13.dev.md  CHANGELOG-0.1.14.dev.md  CHANGELOG-0.1.15.md  CHANGELOG-0.1.16.md  CHANGELOG-0.1.17.dev.md  CHANGELOG-0.1.18.dev.md  CHANGELOG-0.1.19.dev.md  CHANGELOG-0.1.2.dev.md  CHANGELOG-0.1.2.md  CHANGELOG-0.1.20.dev.md  CHANGELOG-0.1.21.md  CHANGELOG-0.1.21.post1.md  CHANGELOG-0.1.21.post2.md  CHANGELOG-0.1.21.post3.md  CHANGELOG-0.1.22b.md  CHANGELOG-0.1.3.dev.md  CHANGELOG-0.1.3.md  CHANGELOG-0.1.4.dev.md  CHANGELOG-0.1.4.md  CHANGELOG-0.1.5.dev.md  CHANGELOG-0.1.5.md  CHANGELOG-0.1.6.dev.md  CHANGELOG-0.1.6.md  CHANGELOG-0.1.7.dev.md  CHANGELOG-0.1.7.md  CHANGELOG-0.1.8.dev.md  CHANGELOG-0.1.8.md  CHANGELOG-0.1.9.dev.md  CHANGELOG-0.1.9.md  CHANGELOG-0.2.0b.md  CHANGELOG-0.2.1b.md  CHANGELOG-0.2.2.dev.md  CHANGELOG-0.3.0b.md  (+12 more)
data/: README_data.md
doc_src/: downloads.md  index.md
docs/: 404.html  CHANGELOG.html  CNAME  LICENSE.html  README_git_automation_tools.html  RELEASE-QA_checklist.html  TODO_and_HOWTO.html  _automation_toos.html  _curs_share_experience.html  gh_mkdocs_auto_publish.html  index.html  print_page.html  wip.html
excel_invoice_template/: README.md  __version__.py  invoice_template_CU_tva.xlsx  package_downloads.md
tests/: _test_results.txt  adhoc.cmd  app_settings.yml  app_settings.yml.txt
web2roefact/: README_web_dashb.md
web_dashb_app/: README_web_dashb.md
xl2roefact/: .gitignore  .gitignore_XXX  .pypi_token  README.md  README_rdinv.txt  README_xl2roefact.md  README_xl2roefact_man_page.txt  TODO_packaging.md  __version__  _curs_share_experience.md  app_settings.yml  chkisld.py  chkxml.py  config_settings.py  data_models.py  example_use_Path.glob.py  libutils.py  pyproject.toml  rdinv.py  requirements_240123T0705.txt  requirements_sav_231222h0500.txt  requirements_sav_231224_h0500.txt  requirements_sav_231231_h0730.txt  requirements_sav_240107_h0830.txt  requirements_sav_240107_h0830_pip_export.txt  requirements_sav_240116_h0700.txt  requirements_sav_240122_h1000.txt  requirements_xl2roefact.txt  setup.py  to_dro.txt  tst_fact_test.json  wrxml.py  xl2roefact.py  xl2roefact.spec  xl2roefact_copy_for_sexe.py  xl2roefact_symlink_for_sexe.py  xl2roefact_to_update_name.spec  zz_xl2roefact_symlink_for_sexe.py
xl2roefact/dist_sexe/: .about_this_directory.txt
xl2roefact/doc/: 810.05a-xl2roefact_DLD_specs.md  810.05a-xl2roefact_component.md  MANPAGE_xl2roefact.txt  README_app_config_rules.md  README_xl2roefact_library.md  generated_810.05a-xl2roefact_component.md  invoice_json_model_.md  package_downloads.md  wrapper_810.05a-xl2roefact_DLD_specs.md
xl2roefact/excel_invoice_template/: README.md  README_excel_invoice_rules.md  invoice_template_CU_tva.xlsx  readme_directory_intentions.md
xl2roefact/excel_invoices/: Fact _Petrom_11017969.xlsx
xl2roefact/invoice_files/: .~lock.fact_RENF1004.xlsx#  Fact _Petrom_11017969.json  Fact _Petrom_11017969.xlsx  Fact_Petrom_11017969.json  _PLAN_model_test_factura_generat_anaf.xml  fact_RENF1004.json  fact_RENF1004.xlsx
xl2roefact/modules/: README_rdinv.txt  chkisld.py  chkxml.py  ldxml.py  rdinv.py  wrxml.py
xl2roefact/refact_xml_models_and_specs/: _PLAN_model_test_factura_generat_anaf.xml
xl2roefact/src/: __version__.py  app_cli.py  config_settings.py  libutils.py  rdinv.py  sys_settings.py
xl2roefact/src/commands/: __init__.py
xl2roefact/src/data/: __init__.py  app_settings.yml
xl2roefact/src/xl2roefact/: app_cli.py
xl2roefact/test_data_and_specs/: model_RENware_invoice_register_ptr_structura_date.json
xl2roefact/test_data_and_specs/test_fact_RENware/: fact_RENF1004 - start_SPLIT_cells.xlsx
xl2roefact/test_data_and_specs/test_fact_client/: Fact _Petrom_11017969.xls
xl2roefact/test_data_and_specs_originals/specs/: _my_notes.md
xl2roefact/tests/: .README_what_is_this_dir.txt  Fact_Petrom_11017969.json  Fact_Petrom_11017969.xml  __invoice_summary.md  __wk_invoice_tax_total.md  _draft_JSON_XML_map.md  _test_on_git_results.txt  _test_results.txt  _tmp_wkdoc_invoice_summary.md  adhoc.cmd  adhpc.cmd  fact_RENF1004.json  fact_RENF1004.xlsx  todosXML.md
xl2roefact/tests/test_data_and_specs_originals/fact_Kraftanlagen/: Fact _Petrom_11017969.xlsx
xl2roefact/xl2roefact/: ___wk_cust_area_function.py  __init__.py  __main__.py  __tbd_test_dict_sum.py  __version__.py  _tst_dropme1.py  _tst_dropme2.py  app_cli.py  chkisld.py  chkxml.py  commands.py  config_settings.py  data_models.py  ldxml.py  libutils.py  rdinv.py  rdinv_extras_opiss_240118_admin02.md  rdinv_extras_opiss_240118_admin02.py  sys_settings.py  wrxml.py
xl2roefact/xl2roefact/data/: README_app_config_rules.md  __init__.py  app_settings.yml  config_settings.json  config_settings.toml  owner.yml  owner_data.json  owner_datafile_tmeplate.yml
xl2roefact/xl_invoices/: config_settings.py  rdinv.py
xtest_textual/: requirements.txt  test.py
(+230 files in other folders)
