
[project]
name = "INVOICEtoROefact"
# version = "...""  #NOTE this entry is maintained from `xl2roefact/__version__` file
dynamic = ["version"]
description = "Issued invoices, Excel & Web, import, export & upload to RO E-Fact system"
authors = [
    { name = "Petre Iordanescu", email = "petre.iordanescu@gmail.com" },
    { name = "RENware Software Systems", email = "renware.systems@gmail.com" }
]
# dependencies = []  # is expected to be created by `pdm init`
license = {file = "LICENSE.md"}
requires-python = ">=3.10,<3.11"  # old version, updated for xl2roefact compatibility ">=3.10,<3.13"
classifiers = [  #  [piu@231226] just informative key at this moment
    "Product code :: 0000-0095",  # [piu @ 231226] to test if accepted here
    "Development Status :: 4 - Beta",
    "Intended Audience :: End users",
    "Topic :: Invoices :: Upload invoices :: RO EFact",
    "License :: GNU License",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "altgraph~=0.17.4",
    "argcomplete~=3.2.1",
    "async-generator~=1.10",
    "attrs~=23.1.0",
    "Babel~=2.12.1",
    "beautifulsoup4~=4.12.2",
    "beautifultable~=1.1.0",
    "blinker~=1.7.0",
    "bracex~=2.3.post1",
    "Brotli~=1.0.9",
    "build~=1.0.3",
    "CacheControl~=0.14.0",
    "certifi~=2023.7.22",
    "cffi~=1.15.1",
    "charset-normalizer~=3.2.0",
    "chrome-headless-browser~=0.12.0",
    "chrome-master~=1.4.0",
    "click~=8.1.7",
    "click-man~=0.4.1",
    "colorama~=0.4.6",
    "commonmark~=0.9.1",
    "cssselect2~=0.7.0",
    "cx-Freeze~=6.15.12",
    "cx-Logging~=3.1.0",
    "dep-logic~=0.0.4",
    "distlib~=0.3.8",
    "et-xmlfile~=1.1.0",
    "exceptiongroup~=1.1.3",
    "filelock~=3.12.3",
    "findpython~=0.4.1",
    "fonttools~=4.42.0",
    "Fraction~=2.2.0",
    "future~=0.18.3",
    "ghp-import~=2.1.0",
    "gitdb~=4.0.10",
    "GitPython~=3.1.32",
    "h11~=0.14.0",
    "html5lib~=1.1",
    "idna~=3.4",
    "importlib-metadata~=6.8.0",
    "installer~=0.7.0",
    "Jinja2~=3.1.2",
    "lief~=0.14.1",
    "Markdown~=3.4.4",
    "markdown-exec~=1.6.0",
    "markdown-it-py~=3.0.0",
    "MarkupSafe~=2.1.3",
    "mdurl~=0.1.2",
    "mergedeep~=1.3.4",
    "mkdocs~=1.5.2",
    "mkdocs-autorefs~=0.5.0",
    "mkdocs-git-revision-date-localized-plugin~=1.2.0",
    "mkdocs-include-markdown-plugin~=6.0.0",
    "mkdocs-macros-plugin~=1.0.4",
    "mkdocs-material~=9.1.21",
    "mkdocs-material-extensions~=1.1.1",
    "mkdocs-pdf-export-plugin~=0.5.10",
    "mkdocs-pdf-with-js-plugin~=0.1.3",
    "mkdocs-print-site-plugin~=2.3.5",
    "mkdocs-same-dir~=0.1.2",
    "mkdocs-table-reader-plugin~=2.0.1",
    "mkdocs-typer~=0.0.3",
    "mkdocstrings~=0.23.0",
    "msgpack~=1.0.7",
    "numpy~=1.25.2",
    "openpyxl~=3.1.2",
    "outcome~=1.2.0",
    "packaging~=23.2",
    "pandas~=2.1.0",
    "pathspec~=0.11.2",
    "pdm~=2.12.3",
    "pdoc~=14.2.0",
    "pefile~=2023.2.7",
    "Pillow~=10.0.0",
    "platformdirs~=4.1.0",
    "ply~=3.11",
    "pycparser~=2.21",
    "pydyf~=0.7.0",
    "Pygments~=2.17.2",
    "pygments-ansi-color~=0.3.0",
    "pyinstaller-hooks-contrib~=2023.12",
    "pylightxl~=1.61",
    "pymdown-extensions~=10.1",
    "pyphen~=0.14.0",
    "pyproject-hooks~=1.0.0",
    "PySocks~=1.7.1",
    "pysondb~=1.6.7",
    "python-dateutil~=2.8.2",
    "python-dotenv~=1.0.1",
    "pytz~=2023.3",
    "pytzdata~=2020.1",
    "pywin32-ctypes~=0.2.2",
    "PyYAML~=6.0.1",
    "pyyaml-env-tag~=0.1",
    "qt4w~=2.1.5",
    "qtaf~=5.6.8",
    "regex~=2023.8.8",
    "requests~=2.31.0",
    "requests-toolbelt~=1.0.0",
    "resolvelib~=1.0.1",
    "rich~=13.7.0",
    "selenium~=4.11.2",
    "shellingham~=1.5.4",
    "six~=1.16.0",
    "smmap~=5.0.0",
    "sniffio~=1.3.0",
    "sortedcontainers~=2.4.0",
    "soupsieve~=2.4.1",
    "style~=1.1.0",
    "tabulate~=0.9.0",
    "termcolor~=2.3.0",
    "time-machine~=2.13.0",
    "tinycss2~=1.2.1",
    "tomli~=2.0.1",
    "tomlkit~=0.12.3",
    "tornado~=5.1.1",
    "trio~=0.22.2",
    "trio-websocket~=0.10.3",
    "truststore~=0.8.0",
    "typer~=0.9.0",
    "typing-extensions~=4.9.0",
    "tzdata~=2023.4",
    "unearth~=0.14.0",
    "update~=0.0.1",
    "urllib3~=2.0.4",
    "userpath~=1.9.1",
    "virtualenv~=20.25.0",
    "watchdog~=3.0.0",
    "wcmatch~=8.4.1",
    "wcwidth~=0.2.6",
    "weasyprint~=59.0",
    "webencodings~=0.5.1",
    "websocket-client~=1.6.1",
    "wsproto~=1.2.0",
    "xl2roefact",  # always try for las version available
    "zipp~=3.16.2",
    "zopfli~=0.2.2"
]
readme = "README.md"



[project.urls]
Homepage = "https://https://invoicetoroefact.renware.eu"
PDF-Documentation = "https://invoicetoroefact.renware.eu/pdfs/print_page.html/print_page.pdf"
Repository = "https://github.com/petre-renware/api_to_roefact"



[tool.pdm]
version = { source = "file", path = "__version__.py" }
distribution = false



[tool.pdm.scripts]  # reference: `https://pdm-project.org/latest/usage/scripts/`
build_site = {shell = "mkdocs build"}  # run `mkdocs` to build site with parameters defined in `mkdocs.yml`



[tool.pdm.dev-dependencies]  # dependencies used only in develeopment and not transfered in Pythn package building
#TODO : to move here:
#  - all `mkdocs` packages & extensions
#  - all `cx-*`packages
#  - `pydoc` and all other doc generators
#  - ...NOTE; write here more as detected...
dev = []



#NOTE section add for `cxFreeze`, for details see here: `https://cx-freeze.readthedocs.io/en/latest/setup_script.html#commands`
[tool.distutils.build_exe]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["encodings", "PySide6"]



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
